feat(frontend): allow approve/run all tasks in a stage for tenant mode issue (#1545)
Former-commit-id: 19c84e4fe60a97788c1f7fe1041aba5d9508c41c

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -480,7 +480,8 @@
       }
     },
     "new-issue": "@:common.new @:common.issue",
-    "format-on-save": "Format on save"
+    "format-on-save": "Format on save",
+    "action-to-current-stage": "{action} current stage"
   },
   "alter-schema": {
     "vcs-enabled": "This project has enabled VCS based version control and selecting database below will navigate you to the corresponding Git repository to initiate the change process.",
