chore: update `set as context` placeholder (#1563)
Former-commit-id: faea8fb385a9b042c7e84db99c9dbcd25b78b902

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1165,7 +1165,7 @@
     "view-all-tabs": "View all Tabs",
     "sheet": "Sheet",
     "sheets": "Sheets",
-    "connection-holder": "Select a connection from left panel to get started",
+    "connection-holder": "Set a connection context from left panel to get started",
     "link-access": "Link access",
     "private": "Private",
     "private-desc": "Only you can access this sheet",
