--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1165,7 +1165,7 @@
     "view-all-tabs": "查看所有标签页",
     "sheet": "工作表",
     "sheets": "工作表",
-    "connection-holder": "选择一个数据连接以开始",
+    "connection-holder": "请先从左侧数据库列表中设置一个连接上下文",
     "link-access": "链接访问权限",
     "private": "私有",
     "private-desc": "只有您自己可以访问此工作表",
