feat(frontend): migration history detail improvement (#1604)
* feat(frontend): title slot support for BBModal

* chore: update i18n resources

* fix(frontend): do not request when leaving page

* feat(frontend): implementing BYT-630

* fix(frontend): refresh router-view component when slug in url changes

* Update frontend/src/locales/en-US.json

Co-authored-by: Steven <imrealleonardo@gmail.com>

Co-authored-by: Steven <imrealleonardo@gmail.com>
Former-commit-id: d3de554f85ca6096092880454513b8d67a1c6577

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -713,13 +713,15 @@
     "workflow": "工作流",
     "commit-info": "由 {author} 于 {time}",
     "no-schema-change": "本次变更没有任何 Schema 的改动",
-    "schema-drift": "上次变更后的 Schema 与本次变更前不一致",
+    "schema-drift": "Schema 偏差",
+    "schema-drift-detected": "上次变更后的 Schema 与本次变更前不一致。",
+    "view-drift": "查看偏差",
     "before-left-schema-choice": "比较",
     "left-schema-choice-prev-history-schema": "上次变更后",
     "left-schema-choice-current-history-schema-prev": "本次变更前",
     "after-left-schema-choice": "和本次变更后的 Schema",
     "show-diff": "显示差异",
-    "left-vs-right": "之前 (左) vs 当前版本 (右)",
+    "left-vs-right": "之前{prevLink} vs 当前版本",
     "schema-snapshot-after-migration": "完成这次变更后的 schema 快照",
     "list-limit": "对于有变更历史的数据库，我们会在下面最多列出5条记录。您可以点击数据库名称去进一步查看全部的记录。",
     "no-history-in-project": "这个项目下没有发现任何数据库有变更历史。",
