--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -713,13 +713,15 @@
     "workflow": "Workflow",
     "commit-info": "by {author} at {time}",
     "no-schema-change": "this migration has no schema change",
-    "schema-drift": "Schema drift detected",
+    "schema-drift": "Schema drift",
+    "schema-drift-detected": "A schema drift was detected.",
+    "view-drift": "View drift",
     "before-left-schema-choice": "Compare the schema",
     "left-schema-choice-prev-history-schema": "after prev migration",
     "left-schema-choice-current-history-schema-prev": "before this migration",
     "after-left-schema-choice": "and after this migration",
     "show-diff": "Show diff",
-    "left-vs-right": "Prev (left) vs This version (right)",
+    "left-vs-right": "Prev {prevLink} vs This version",
     "schema-snapshot-after-migration": "The schema snapshot recorded after applying this migration",
     "list-limit": "For database having migration history, we list up to 5 most recent histories below. You can click the database name to view all histories.",
     "no-history-in-project": "Do not find migration history from any database in this project.",
