feat: ghost table suffix (#1645)
* feat(frontend): support custom footer slot

* feat(frontend): show gh-ost tables with a badge

* fix: support new gh-ost table name format

* chore: update comments

* chore: do not use confusing constant

Former-commit-id: 810d5d83c0145341594f20ae4b0e3e43e0d0a5ee

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -815,7 +815,8 @@
       "restore-to-point-in-time": "Restore to point in time",
       "no-earlier-than": "Restore point-in-time cannot be earlier than [{earliest}] (the earliest available backup).",
       "no-later-than-now": "Restore point-in-time cannot be later than now."
-    }
+    },
+    "show-reserved-tables": "Show bytebase reserved tables"
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
