--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -815,7 +815,8 @@
       "restore-to-point-in-time": "恢复到指定时间点",
       "no-earlier-than": "恢复的时间点不能早于 [{earliest}] (最早可用的备份)。",
       "no-later-than-now": "恢复的时间点不能晚于当前时间。"
-    }
+    },
+    "show-reserved-tables": "显示 bytebase 保留的表"
   },
   "repository": {
     "branch-observe-file-change": "Bytebase 跟踪文件变更的分支。",
