chore: modify some texts (#1642)
* chore: change text "Environment" -> "Environment Name"

* chore: change words to plural forms

Former-commit-id: 742f75bb571baebb368c893d5aae2a1e60bcca1a

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -46,6 +46,7 @@
     "instances": "Instances",
     "environment": "Environment",
     "environments": "Environments",
+    "environment-name": "Environment Name",
     "bookmark": "Bookmark",
     "bookmarks": "Bookmarks",
     "quick-action": "Quick Action",
