--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -46,6 +46,7 @@
     "instances": "实例",
     "environment": "环境",
     "environments": "环境",
+    "environment-name": "环境名",
     "bookmark": "书签",
     "bookmarks": "书签",
     "quick-action": "快捷操作",
