feat(frontend): display a tag for pitr databases (#1661)
* feat(frontend): display a tag for pitr databases

* Update frontend/src/locales/en-US.json

Co-authored-by: boojack <imrealleonardo@gmail.com>

* Update frontend/src/locales/en-US.json

Co-authored-by: boojack <imrealleonardo@gmail.com>

* Update frontend/src/locales/zh-CN.json

Co-authored-by: boojack <imrealleonardo@gmail.com>

* Update frontend/src/locales/zh-CN.json

Co-authored-by: boojack <imrealleonardo@gmail.com>

Co-authored-by: boojack <imrealleonardo@gmail.com>
Former-commit-id: 6788c75d032b9fb79331219a5ad8bda72a9d3d94

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -817,7 +817,8 @@
       "no-earlier-than": "Restore point-in-time cannot be earlier than [{earliest}] (the earliest available backup).",
       "no-later-than-now": "Restore point-in-time cannot be later than now."
     },
-    "show-reserved-tables": "Show bytebase reserved tables"
+    "show-reserved-tables": "Show Bytebase reserved tables",
+    "show-reserved-databases": "Show Bytebase reserved databases"
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
