--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -817,7 +817,8 @@
       "no-earlier-than": "恢复的时间点不能早于 [{earliest}] (最早可用的备份)。",
       "no-later-than-now": "恢复的时间点不能晚于当前时间。"
     },
-    "show-reserved-tables": "显示 bytebase 保留的表"
+    "show-reserved-tables": "显示 Bytebase 保留的表",
+    "show-reserved-databases": "显示 Bytebase 保留的数据库"
   },
   "repository": {
     "branch-observe-file-change": "Bytebase 跟踪文件变更的分支。",
