chore: change occurrence of "bytebase" to "Bytebase" (#1663)
* chore: change occurrence of "bytebase" to "Bytebase"

* chore: update

* chore: update

Former-commit-id: 1156da9d7f7f35705bf147b94690617e860f9035

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1226,7 +1226,7 @@
     "unknown-event": "Unexpeted event type, OAuth failed."
   },
   "subscription": {
-    "description": "You can upload your bytebase license to unlock team/enterprise features.",
+    "description": "You can upload your Bytebase license to unlock team/enterprise features.",
     "current": "Current plan",
     "instance-count": "Instance count",
     "expires-at": "Expires at",
