feat(frontend): add feature gate to gh-ost (#1665)
Former-commit-id: 5e522bb7769f997f5bb128c9d418a0cd70c8d08e

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1308,6 +1308,10 @@
       "bb-feature-branding": {
         "title": "Branding",
         "desc": "Customize the logo."
+      },
+      "bb-feature-online-migration": {
+        "title": "Online migration",
+        "desc": "Based on gh-ost. For large tables, it can reduce the table lock duration from hours to seconds."
       }
     },
     "feature-sections": {
