--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1308,6 +1308,10 @@
       "bb-feature-branding": {
         "title": "自定义品牌信息",
         "desc": "定制 Logo"
+      },
+      "bb-feature-online-migration": {
+        "title": "在线变更",
+        "desc": "基于 gh-ost。对于大表，可以把锁表的时间从小时级降低到秒级。"
       }
     },
     "feature-sections": {
