feat(frontend): show gh-ost in pricing table (#1668)
Former-commit-id: 95d752631296d470d15b9aa7e727aab1b20fd24f

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1323,6 +1323,10 @@
           "instance-customized": "Customized",
           "instance-minimum-5": "5 ~ unlimited",
           "schema-change": "Schema and data change",
+          "schema-change-basic": "Basic",
+          "schema-change-basic-tooltip": "Normal migration",
+          "schema-change-advanced": "Advanced",
+          "schema-change-advanced-tooltip": "Normal migration + Online migration (gh-ost)",
           "migration-history": "Migration history",
           "sql-editor": "SQL Editor",
           "disaster-recovery": "Disaster recovery",
