--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1323,6 +1323,10 @@
           "instance-minimum-5": "5 ~ 无限制",
           "instance-customized": "自定义",
           "schema-change": "Schema 和数据变更",
+          "schema-change-basic": "基础",
+          "schema-change-basic-tooltip": "普通变更",
+          "schema-change-advanced": "高级",
+          "schema-change-advanced-tooltip": "普通变更 + 在线变更 (gh-ost)",
           "migration-history": "变更历史",
           "sql-editor": "SQL 编辑器",
           "disaster-recovery": "数据灾备",
