feat(frontend): add feature gate to pitr (#1666)
* feat(frontend): add feature gate to pitr

* Update frontend/src/locales/zh-CN.json

Co-authored-by: Yilong Li <liyilongko@gmail.com>

Co-authored-by: Yilong Li <liyilongko@gmail.com>
Former-commit-id: 19db2d3eeef92e1929dbf84244e57d62fc8bcfdb

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1312,6 +1312,10 @@
       "bb-feature-online-migration": {
         "title": "Online migration",
         "desc": "Based on gh-ost. For large tables, it can reduce the table lock duration from hours to seconds."
+      },
+      "bb-feature-disaster-recovery-pitr": {
+        "title": "Point-in-Time-Recovery (PITR)",
+        "desc": "Restore the database state to a point in time."
       }
     },
     "feature-sections": {
