--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1312,6 +1312,10 @@
       "bb-feature-online-migration": {
         "title": "在线变更",
         "desc": "基于 gh-ost。对于大表，可以把锁表的时间从小时级降低到秒级。"
+      },
+      "bb-feature-disaster-recovery-pitr": {
+        "title": "恢复到指定时间点 (PITR)",
+        "desc": "将数据库的状态恢复到一个时间点。"
       }
     },
     "feature-sections": {
