--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -389,7 +389,8 @@
       "project-member-create": "add project member",
       "project-member-delete": "delete project member",
       "project-member-role-update": "change project member role",
-      "pipeline-task-earliest-allowed-time-update": "update earliest allowed time"
+      "pipeline-task-earliest-allowed-time-update": "update earliest allowed time",
+      "database-recovery-pitr-done": "restore database to point in time"
     },
     "sentence": {
       "created-issue": "created issue",
