--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -389,7 +389,8 @@
       "project-member-create": "添加项目成员",
       "project-member-delete": "删除项目成员",
       "project-member-role-update": "变更项目成员角色",
-      "pipeline-task-earliest-allowed-time-update": "更新最早允许执行时间"
+      "pipeline-task-earliest-allowed-time-update": "更新最早允许执行时间",
+      "database-recovery-pitr-done": "将数据库恢复到指定时间点"
     },
     "sentence": {
       "created-issue": "创建工单",
