feat(frontend): project selector improvement (#1714)
Former-commit-id: 6f3d5d0c51079c77e960578e0c9bda8cdd054cb2

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1000,7 +1000,8 @@
       "standard": "Standard",
       "tenant": "Tenant"
     },
-    "db-name-template": "@:common.database @:common.name @:common.template"
+    "db-name-template": "@:common.database @:common.name @:common.template",
+    "select": "Select project"
   },
   "inbox": {
     "mark-all-as-read": "Mark all as read",
