--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -1446,13 +1446,10 @@
       "schema": "Schema"
     },
     "template": {
-      "policy-for-prod": {
-        "title": "Production Environment Template"
-      },
-      "policy-for-dev": {
-        "title": "Development Environment Template"
-      }
+      "mysql-prod": "Production Environment Template",
+      "mysql-dev": "Development Environment Template"
     },
+    "input-then-press-enter": "Input the value then press enter to add",
     "rule": {
       "engine-mysql-use-innodb": {
         "title": "Use Innodb",
@@ -1464,27 +1461,71 @@
       },
       "naming-table": {
         "title": "Table naming check",
-        "description": "Enforce the table name format. Default snake_lower_case."
+        "description": "Enforce the table name format. Default snake_lower_case.",
+        "component": {
+          "name_format": {
+            "title": "Table name format (regex)"
+          }
+        }
       },
       "naming-column": {
         "title": "Column naming check",
-        "description": "Enforce the column name format. Default snake_lower_case."
+        "description": "Enforce the column name format. Default snake_lower_case.",
+        "component": {
+          "name_format": {
+            "title": "Column name format (regex)"
+          }
+        }
       },
       "naming-index-uk": {
         "title": "Unique key naming check",
-        "description": "Enforce the unique key name format. Default uk_<table_name>_<column_list>."
+        "description": "Enforce the unique key name format. Default uk_<table_name>_<column_list>.",
+        "component": {
+          "name_format": {
+            "title": "Unique key name format",
+            "template": {
+              "table": "The table name",
+              "column_list": "Index column names, joined by _"
+            }
+          }
+        }
       },
       "naming-index-fk": {
         "title": "Foreign key naming check",
-        "description": "Enforce the foreign key name format. Default fk_<referencing_table>_<referencing_column>_<referenced_table>_<referenced_column>."
+        "description": "Enforce the foreign key name format. Default fk_<referencing_table>_<referencing_column>_<referenced_table>_<referenced_column>.",
+        "component": {
+          "name_format": {
+            "title": "Foreign key name format",
+            "template": {
+              "referencing_table": "The referencing table name",
+              "referencing_column": "The referencing column name",
+              "referenced_table": "The referenced table name",
+              "referenced_column": "The referenced column name"
+            }
+          }
+        }
       },
       "naming-index-idx": {
         "title": "Index naming check",
-        "description": "Enforce the index name format. Default idx_<table_name>_<column_list>."
+        "description": "Enforce the index name format. Default idx_<table_name>_<column_list>.",
+        "component": {
+          "name_format": {
+            "title": "Index name format",
+            "template": {
+              "table": "The table name",
+              "column_list": "Index column names, joined by _"
+            }
+          }
+        }
       },
       "column-required": {
         "title": "Required columns",
-        "description": "Enforce the required columns in each table."
+        "description": "Enforce the required columns in each table.",
+        "component": {
+          "column_list": {
+            "title": "Required column names"
+          }
+        }
       },
       "column-no-null": {
         "title": "Disallow NULL",
@@ -1505,23 +1546,6 @@
       "schema-backward-compatibility": {
         "title": "Backward compatibility",
         "description": "MySQL and TiDB support checking whether the schema change is backward compatible."
-      }
-    },
-    "payload-config": {
-      "table-name-format": "Table name format (regex)",
-      "column-name-format": "Column name format (regex)",
-      "uk-name-format": "Unique key name format",
-      "idx-name-format": "Index name format",
-      "fk-name-format": "Foreign key name format",
-      "required-column": "Required column names",
-      "input-then-press-enter": "Input the value then press enter to add",
-      "template": {
-        "table-name": "The table name",
-        "column-list": "Index column names, joined by _",
-        "referencing-table": "The referencing table name",
-        "referencing-column": "The referencing column name",
-        "referenced-table": "The referenced table name",
-        "referenced-column": "The referenced column name"
       }
     },
     "error-level": {
