--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1447,13 +1447,10 @@
       "schema": "Schema"
     },
     "template": {
-      "policy-for-prod": {
-        "title": "针对生产环境的审核策略模板"
-      },
-      "policy-for-dev": {
-        "title": "针对开发环境的审核策略模板"
-      }
+      "mysql-prod": "针对生产环境的审核策略模板",
+      "mysql-dev": "针对开发环境的审核策略模板"
     },
+    "input-then-press-enter": "输入后按下回车来添加",
     "rule": {
       "engine-mysql-use-innodb": {
         "title": "使用 InnoDB 作为储存引擎",
@@ -1465,27 +1462,71 @@
       },
       "naming-table": {
         "title": "表名命名检查",
-        "description": "限制表名命名风格，默认为小写字母_下划线。"
+        "description": "限制表名命名风格，默认为小写字母_下划线。",
+        "component": {
+          "name_format": {
+            "title": "表命名规则（正则）"
+          }
+        }
       },
       "naming-column": {
         "title": "列名命名检查",
-        "description": "限制列名命名风格，默认为小写字母_下划线。"
+        "description": "限制列名命名风格，默认为小写字母_下划线。",
+        "component": {
+          "name_format": {
+            "title": "列命名规则（正则）"
+          }
+        }
       },
       "naming-index-uk": {
         "title": "唯一键命名检查",
-        "description": "限制唯一键命名风格，默认为 uk_<表名>_<主键包含的字段名组合>。"
+        "description": "限制唯一键命名风格，默认为 uk_<表名>_<主键包含的字段名组合>。",
+        "component": {
+          "name_format": {
+            "title": "唯一键命名规则",
+            "template": {
+              "table": "表名",
+              "column_list": "索引包含的字段名，通过 _ 连接"
+            }
+          }
+        }
       },
       "naming-index-fk": {
         "title": "外键命名检查",
-        "description": "限制外键命名风格，默认为 fk_<目标表名>_<目标字段名>_<被引用表名>_<被引用字段名>。"
+        "description": "限制外键命名风格，默认为 fk_<目标表名>_<目标字段名>_<被引用表名>_<被引用字段名>。",
+        "component": {
+          "name_format": {
+            "title": "外键命名规则",
+            "template": {
+              "referencing_table": "目标表名",
+              "referencing_column": "目标字段名",
+              "referenced_table": "被引用的表名",
+              "referenced_column": "被引用的字段名"
+            }
+          }
+        }
       },
       "naming-index-idx": {
         "title": "索引命名检查",
-        "description": "限制索引命名风格，默认为 idx_<表名>_<索引包含的字段名组合>。"
+        "description": "限制索引命名风格，默认为 idx_<表名>_<索引包含的字段名组合>。",
+        "component": {
+          "name_format": {
+            "title": "索引命名规则",
+            "template": {
+              "table": "表名",
+              "column_list": "索引包含的字段名，通过 _ 连接"
+            }
+          }
+        }
       },
       "column-required": {
         "title": "必须包含的字段",
-        "description": "强制要求表中必须包含某些字段。"
+        "description": "强制要求表中必须包含某些字段。",
+        "component": {
+          "column_list": {
+            "title": "必须包含的字段名"
+          }
+        }
       },
       "column-no-null": {
         "title": "禁止字段为 NULL",
@@ -1506,23 +1547,6 @@
       "schema-backward-compatibility": {
         "title": "向后兼容",
         "description": "MySQL 和 TiDB 支持检测 schema 变更是否向后兼容"
-      }
-    },
-    "payload-config": {
-      "table-name-format": "表命名规则（正则）",
-      "column-name-format": "列命名规则（正则）",
-      "uk-name-format": "唯一键命名规则",
-      "idx-name-format": "索引命名规则",
-      "fk-name-format": "外键命名规则",
-      "required-column": "必须包含的字段名",
-      "input-then-press-enter": "输入后按下回车来添加",
-      "template": {
-        "table-name": "表名",
-        "column-list": "索引包含的字段名，通过 _ 连接",
-        "referencing-table": "目标表名",
-        "referencing-column": "目标字段名",
-        "referenced-table": "被引用的表名",
-        "referenced-column": "被引用的字段名"
       }
     },
     "error-level": {
