feat(frontend): support pitr backup type in backup table (#1776)
Former-commit-id: 7227a5e6f5e999a6b4e2ae631d40253b672c087a

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -200,7 +200,8 @@
     "disable": "Disable",
     "view-doc": "View doc",
     "backup-and-restore": "Backup and restore",
-    "write-only": "write only"
+    "write-only": "write only",
+    "pitr": "PITR"
   },
   "error-page": {
     "go-back-home": "Go back home"
