chore: add table no foreign key rule (#1854)
* chore: add table no foreign key rule

* fix: test

Former-commit-id: 9fb71e27c356a61cf2eaf714bc34a8c870a6e097

--- a/frontend/src/locales/sql-review/en-US.json
+++ b/frontend/src/locales/sql-review/en-US.json
@@ -24,6 +24,10 @@
       "title": "Require primary key",
       "description": "Require the table to have a primary key."
     },
+    "table-no-foreign-key": {
+      "title": "No foreign key",
+      "description": "Disallow the foreign key in the table."
+    },
     "naming-table": {
       "title": "Table naming check",
       "description": "Enforce the table name format and length limit. Default snake_lower_case with 64 characters.",
