--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1294,7 +1294,7 @@
         "title": "备份策略",
         "desc": "「备份策略」可以根据指定的周期自动备份数据库"
       },
-      "bb-feature-schema-review-policy": {
+      "bb-feature-sql-review": {
         "title": "Schema 审核策略",
         "desc": "给不同的环境定制 schema 审核策略，可以通过@:{'subscription.upgrade'}来开启该功能。"
       },
@@ -1349,7 +1349,7 @@
           "sql-check-basic": "基础",
           "sql-check-basic-tooltip": "语法检查、数据库连接检查",
           "sql-check-advanced": "高级",
-          "sql-check-advanced-tooltip": "基础版功能 + 自定义 schema 审核规则",
+          "sql-check-advanced-tooltip": "基础版功能 + 自定义 SQL 审核规则",
           "anomaly-detection": "异常检测",
           "anomaly-detection-basic": "基础",
           "anomaly-detection-basic-tooltip": "数据库连接异常、备份缺失",
@@ -1424,10 +1424,10 @@
     "mysql": "MySQL",
     "common": "通用"
   },
-  "schema-review-policy": {
-    "title": "Schema 审核策略",
+  "sql-review": {
+    "title": "SQL 审核策略",
     "disabled": "已禁用",
-    "no-policy-set": "没有 schema 审核策略",
+    "no-policy-set": "没有 SQL 审核策略",
     "create-policy": "创建审核策略",
     "configure-policy": "配置审核策略",
     "search-rule-name": "搜索规则名称",
@@ -1448,7 +1448,7 @@
         "display-name": "名称",
         "display-name-placeholder": "审核策略名称",
         "display-name-label": "用以区分不同审核策略的名称。",
-        "display-name-default": "Schema 审核策略",
+        "display-name-default": "SQL 审核策略",
         "environments": "环境",
         "environments-label": "将该审核策略应用于哪些环境。一个环境只能关联一个审核策略。",
         "environments-select": "选择环境",
