chore(schema system): implement the drop table naming convention rule (#1867)
* feat: add table.drop-with-name-pattern rule in the frontend

* chore: rename the rule type

* chore: implement the drop table naming convention in the backend

* fix: lint

* chore: fix error code

* chore: fix conflict

* fix: test

* chore: update test

* chore: update test

Co-authored-by: Danny Xu <98006139+d-bytebase@users.noreply.github.com>
Former-commit-id: 750cce39d97c4826369840da77780f66fdc81b12

--- a/frontend/src/locales/sql-review/en-US.json
+++ b/frontend/src/locales/sql-review/en-US.json
@@ -28,6 +28,15 @@
       "title": "No foreign key",
       "description": "Disallow the foreign key in the table."
     },
+    "table-drop-naming-convention": {
+      "title": "Drop table with naming convention",
+      "description": "Only tables named with specific patterns can be deleted. The requires users to do a rename before dropping the table. The table name must have \"_delete\" suffix by default.",
+      "component": {
+        "name_format": {
+          "title": "Table name format (regex)"
+        }
+      }
+    },
     "naming-table": {
       "title": "Table naming check",
       "description": "Enforce the table name format and length limit. Default snake_lower_case with 64 characters.",
