feat(backup): add retention policy to store (#1874)
* feat(backup): define backup retention policy API

* feat: add retention hint when enable backup

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

Former-commit-id: 9c0c5cc9ab33d4a659aae938aab034536cce9019

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -768,7 +768,7 @@
     },
     "an-http-post-request-will-be-sent-to-it-after-a-successful-backup": "An HTTP POST request will be sent to it after a successful backup.",
     "backup-info": {
-      "template": "Backup will be taken on every {dayOrWeek} at {time}"
+      "template": "Backup will be taken on every {dayOrWeek} at {time}. Backup data will be kept for {retentionDays} days."
     },
     "week": {
       "Sunday": "Sunday",
