feat(frontend): database backup setting improvement (#1938)
* feat(frontend): database backup setting improvement

* chore: refactor

* chore: remove unused variables

* chore: use camelCase

* chore: refactor

* feat(frontend): show backup policy violation tips

* feat(i18n): i18n support of form labels

* chore: styles

* chore: remove unused

* chore: refactor

* chore: remove unused

* chore: refactor

* chore: address comments

* chore: remove unused

* chore: wording

* chore: wording

* feat: update schedule check rule

* Update frontend/src/locales/en-US.json

Co-authored-by: boojack <stevenlgtm@gmail.com>

* chore: update

Co-authored-by: boojack <stevenlgtm@gmail.com>
Former-commit-id: a10e3c772571ee77ee95f8638fffe39e027a64c3

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -202,6 +202,7 @@
     "backup-and-restore": "Backup and restore",
     "write-only": "write only",
     "pitr": "PITR",
+    "fix": "Fix",
     "go-now": "Go now"
   },
   "error-page": {
@@ -825,7 +826,21 @@
       "no-later-than-now": "Restore point-in-time cannot be later than now."
     },
     "show-reserved-tables": "Show Bytebase reserved tables",
-    "show-reserved-databases": "Show Bytebase reserved databases"
+    "show-reserved-databases": "Show Bytebase reserved databases",
+    "backup-setting": {
+      "schedule": {
+        "disabled": "Disabled",
+        "weekly": "Every week",
+        "daily": "Every day"
+      },
+      "form": {
+        "schedule": "Schedule",
+        "day-of-week": "Day of week",
+        "time-of-day": "Time of day",
+        "retention-period": "Retention period(days)"
+      }
+    },
+    "backup-policy-violation": "Backup policy violation"
   },
   "repository": {
     "branch-observe-file-change": "The branch where Bytebase observes the file change.",
