--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -495,7 +495,7 @@
     "vcs-info": "indicates the project has enabled VCS based version control. Selecting database belonging to such project will navigate you to the corresponding Git repository to initiate the change process.",
     "alter-single-db": "Alter single database",
     "alter-multiple-db": "Alter multiple databases",
-    "alter-multiple-db-info": "For each environment, you can select a database to alter its schema or just skip that environment. This allows you to compose a single pipeline to propagate changes across multiple environments."
+    "alter-multiple-db-info": "For each environment, you can select multiple databases to alter their schemas or just skip that environment. This allows you to compose a single pipeline to propagate changes across multiple environments."
   },
   "quick-action": {
     "create-db": "Create database",
