chore: update readonly banner i18n (#1973)
Former-commit-id: a885e14139949472e65cc2951ad95f3994c5f30f

--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -273,7 +273,8 @@
     "trial-expires": "Your free trial for {plan} will expire in {days} days on {expireAt}.",
     "extend-trial": "Extend trialing time",
     "action": "Deploy yours in 5 seconds",
-    "debug": "Debug mode is active, you can disable Debug mode via the top-right profile dropdown."
+    "debug": "Debug mode is active, you can disable Debug mode via the top-right profile dropdown.",
+    "readonly": "Server is in readonly mode. You can still view the console, but any change attempt will fail."
   },
   "intro": {
     "doc": "doc",
