--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -490,7 +490,10 @@
     "format-on-save": "Format on save",
     "action-to-current-stage": "{action} current stage",
     "edit-sql-statement-in-vcs": "This project has enabled VCS based version control. Please modify the SQL file in the corresponding Git repository, and commit it to create a new issue.",
-    "edit-sql-statement": "Edit SQL statement"
+    "edit-sql-statement": "Edit SQL statement",
+    "upload-file": "Upload file",
+    "override-current-statement": "Override current SQL statement",
+    "upload-sql-file-max-size-exceeded": "Max file size ({size}) exceeded."
   },
   "alter-schema": {
     "vcs-enabled": "This project has enabled VCS based version control and selecting database below will navigate you to the corresponding Git repository to initiate the change process.",
