--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -491,7 +491,10 @@
     "format-on-save": "保存时格式化",
     "action-to-current-stage": "{action}当前阶段",
     "edit-sql-statement-in-vcs": "该项目开启了基于 VCS 的版本管理。请在对应的 Git 仓库修改 SQL 文件并提交，开启新的工单。",
-    "edit-sql-statement": "编辑 SQL 语句"
+    "edit-sql-statement": "编辑 SQL 语句",
+    "upload-file": "上传文件",
+    "override-current-statement": "覆盖当前的 SQL 语句",
+    "upload-sql-file-max-size-exceeded": "上传文件大小不能超过 {size}。"
   },
   "alter-schema": {
     "vcs-enabled": "该项目开启了基于 VCS 的版本管理，选择下面的数据库会将您导航到相应的 Git 仓库以发起变更流程。",
