--- a/frontend/src/locales/sql-review/en-US.json
+++ b/frontend/src/locales/sql-review/en-US.json
@@ -31,7 +31,7 @@
     },
     "table-drop-naming-convention": {
       "title": "Drop table with naming convention",
-      "description": "Only tables named with specific patterns can be deleted. The requires users to do a rename before dropping the table. The table name must have \"_delete\" suffix by default.",
+      "description": "Only tables named with specific patterns can be deleted. The requires users to do a rename before dropping the table. The table name must have \"_del\" suffix by default.",
       "component": {
         "name_format": {
           "title": "Table name format (regex)"
