--- a/frontend/src/locales/sql-review/zh-CN.json
+++ b/frontend/src/locales/sql-review/zh-CN.json
@@ -31,7 +31,7 @@
     },
     "table-drop-naming-convention": {
       "title": "待删除表的命名规范",
-      "description": "只有符合命名规范的表才可以被删除，通过强制用户在删除前重命名来避免误删。默认情况下待删除表名必须以 \"_delete\" 结尾。",
+      "description": "只有符合命名规范的表才可以被删除，通过强制用户在删除前重命名来避免误删。默认情况下待删除表名必须以 \"_del\" 结尾。",
       "component": {
         "name_format": {
           "title": "命名规则（正则）"
