--- a/frontend/src/locales/en-US.json
+++ b/frontend/src/locales/en-US.json
@@ -491,7 +491,7 @@
     "action-to-current-stage": "{action} current stage",
     "edit-sql-statement-in-vcs": "This project has enabled VCS based version control. Please modify the SQL file in the corresponding Git repository, and commit it to create a new issue.",
     "edit-sql-statement": "Edit SQL statement",
-    "upload-file": "Upload file",
+    "upload-sql": "Upload SQL",
     "override-current-statement": "Override current SQL statement",
     "upload-sql-file-max-size-exceeded": "Max file size ({size}) exceeded."
   },
