--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -492,7 +492,7 @@
     "action-to-current-stage": "{action}当前阶段",
     "edit-sql-statement-in-vcs": "该项目开启了基于 VCS 的版本管理。请在对应的 Git 仓库修改 SQL 文件并提交，开启新的工单。",
     "edit-sql-statement": "编辑 SQL 语句",
-    "upload-file": "上传文件",
+    "upload-sql": "上传 SQL",
     "override-current-statement": "覆盖当前的 SQL 语句",
     "upload-sql-file-max-size-exceeded": "上传文件大小不能超过 {size}。"
   },
